Fix Select Room

--- a/src/index.css
+++ b/src/index.css
@@ -38,3 +38,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+sample {
+  font-family: Arial, sans-serif;
+  color: black;
+}
+
