--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -36,3 +36,14 @@
   .nav-link {
     padding: 0.5rem 1rem !important;
   }
+
+  .hotel-logo {
+    width: auto;
+    height: 3.75rem;
+    margin-left: 150px;
+    padding-right: 0px;
+  }
+
+  .navbar-brand {
+    padding-left: 0rem;
+  }
