--- a/src/screens/ContactPage.css
+++ b/src/screens/ContactPage.css
@@ -1,39 +1,41 @@
 .nameStyle {
-font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-color:black;
-font-weight: bold;
-font-size:large;
-background-color: lightblue; 
-padding: 5px 10px; 
-border-radius: 5px; 
-margin-left: 320px;
-}
-.submitButtonContainer {
-    text-align: center;
-  }
-  
-  .form-control {
-    width: 50%;
-    min-height: 20px;
-    align-items: center;
-    margin:auto
-  }
-  
-  .form-container {
-    margin-top: 60px; 
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  color: black;
+  font-weight: bold;
+  font-size: large;
+  background-color: lightblue; 
+  padding: 5px 8px; 
+  border-radius: 5px;
+  display: inline-block; 
+  width: 100px; 
+  text-align: center; 
+  margin-right: 470px; 
+  margin-left: 15px;
 }
 
+.submitButtonContainer {
+  text-align: center;
+}
+  
+.form-control {
+  width: 550px; 
+  min-height: 38px; 
+  margin-bottom: 10px; 
+  margin: 0 auto; 
+}
+
+.form-container {
+  margin-top: 80px;
+  text-align: center; 
+  width: 100%;
+}
 
 .Namestyle {
-    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-    color:black;
-    font-weight: bold;
-    font-size:large;
-    background-color: lightblue; 
-    padding: 5px 10px; 
-    border-radius: 5px; 
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  color:black;
+  font-weight: bold;
+  font-size: large;
+  background-color: lightblue; 
+  padding: 5px 10px; 
+  border-radius: 5px; 
 }
-
-
-  
-
