--- a/src/screens/LandingPage.css
+++ b/src/screens/LandingPage.css
@@ -9,13 +9,14 @@
 
 .bookNow {
   position: absolute;
-  left: 73vh;
-  top: 30vh;
+  left: 50%;
+  top: 135%; /* Adjusted top position to move the button a bit lower */
+  transform: translate(-50%, -50%);
   display: inline-block;
   padding: 10px 20px;
   margin: 5px;
   border-radius: 65px;
-  background-color: rgba (0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.5);
   color: #fff;
   text-decoration: none;
   text-transform: uppercase;
