--- a/src/SelectRoom.css
+++ b/src/SelectRoom.css
@@ -42,10 +42,6 @@
   color: #001f3f;
 }
 
-.custom-card {
-  background-color: rgba(245, 245, 245, 0.7) !important;
-}
-
 .indivCard {
   display: flex;
   flex-direction: column;
@@ -85,4 +81,33 @@
 
 .btn-block {
   margin-left: 20px;
+}
+
+.bookNowButton:hover {
+  background-color: #ff9900;
+}
+
+.bookNowButton {
+  position: absolute;
+  left: 50%;
+  top: 85%;
+  transform: translate(-50%, -50%);
+  padding: 10px 20px;
+  margin: 5px;
+  border-radius: 65px;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: #fff;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-weight: bold;
+  transition: background-color 0.3s ease;
+}
+
+.RoomImage {
+  width: 600px;
+  height: 425px;
+}
+
+.Contents {
+  padding-top: 7%;
 }
