--- a/src/RoomType.css
+++ b/src/RoomType.css
@@ -10,6 +10,7 @@
     text-align: center; /* Add this line to center the text */
     width: 50%;
     margin-bottom: 20px;
+    margin-top: 70px;
 
 }
 .form-container {
