--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 main {
-  min-height: 100vh;
+  min-height: 95vh;
 }
 
 h3 {
@@ -28,6 +28,7 @@ h3 {
 
 body {
   margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
