--- a/src/components/GuestLog.css
+++ b/src/components/GuestLog.css
@@ -10,6 +10,7 @@
     text-align: center; /* Add this line to center the text */
     width: 50%;
     margin-bottom: 20px;
+    margin-top: 50px;
   }
 
 /* Custom Table Styles */
